# Chess-Engine

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  Makefile  README.md  TODO.md  board.cpp  board.hh  chessEngine.hh  engine  game.cpp  game.hh  legalMoves.cpp  main.cpp  myApp.cpp  myApp.hh  new.out  noqs.out  players.cpp  players.hh  prev.out  structs.cpp  structs.hh  utils.cpp  utils.hh  wqs.out
aux_program/: chess_board_template.html  config.cfg  main.cpp
extras/: 1stMatch.pgm  1stMatch.url
include/: board.hh  board.hpp  engine_v1.hh  engine_v1.hpp  game.hh  game.hpp  myApp.hh  myApp.hpp  players.hh  players.hpp  utils.hh
src/: board.cpp  game.cpp  legalMoves.cpp  main.cpp  myApp.cpp  players.cpp  utils.cpp
src/engine_v1/: engine_v1.cpp  evaluation_v1.cpp  search_v1.cpp
